fixes text alignment for aphorisms

--- a/app/assets/stylesheets/steps.css.scss
+++ b/app/assets/stylesheets/steps.css.scss
@@ -76,7 +76,7 @@
   position: absolute;
   top: 50px;
   left: 13px;
-  width: 500px;
+  width: 232px;
   word-wrap: break-word;
   font-size: 25px;
   color: #ffffff;
